# vtkpowercrust

./: LICENCE.md  README.md  TestPowerCrust.tcl  vtkPowerCrustSurfaceReconstruction.cxx  vtkPowerCrustSurfaceReconstruction.h
examples/: CMakeLists.txt  README  vtkPowerCrustSurfaceReconstructionExample.cxx
examples/data/: cactus.3337.ply  polydata1.ply  polydata2.ply  polydata3.ply
